# zori

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  config.yaml  config.yaml.example  pyproject.toml
scripts/: eval_dataset.yaml.example
tests/: test_config.py  test_eval.py  test_formatting.py  test_graph.py  test_lexical.py  test_metadata.py  test_paper_finder.py  test_pdf.py  test_pipeline.py  test_retrieval.py  test_search.py  test_vectorstore.py  test_zotero.py
ui/: app.py
zori/: __init__.py  cli.py  config.py  log.py
zori/agents/: graph.py  paper_finder.py  retrieval.py  router.py  summarization.py  writer.py
zori/display/: markdown.py  rich.py
zori/ingestion/: pdf.py  pipeline.py  zotero.py
zori/llm/: client.py  providers.py
zori/retrieval/: formatting.py  lexical.py  metadata.py  retrievers.py  search.py  vector.py  vectorstore.py
zori/templates/: .env.example
zori/ui/: app.py  server.py
zori/ui/static/: index.html
