[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zori"
version = "0.3.0"
description = "An open-source multi-agent research assistant for your Zotero library"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Nazanin Bagherinejad", email = "nazanin.bagherinejad@rwth-aachen.de" }
]
keywords = ["zotero", "research", "llm", "rag", "academic", "papers", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Indexing",
]
dependencies = [
    # Agent orchestration
    "langgraph>=0.2",
    "langchain>=1.0",
    "langchain-openai>=0.2",
    "langchain-anthropic>=0.2",
    "langchain-community>=0.3",
    "langchain-classic>=1.0",
    "langchain-ollama>=0.2",
    # Zotero
    "pyzotero>=1.6",
    # PDF parsing
    "pdfplumber>=0.11",
    # Vector store
    "chromadb>=0.5",
    # Embeddings
    "openai>=1.0",
    "anthropic>=0.30",
    # Config
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    # CLI
    "typer>=0.12",
    "rich>=13.0",
    "langchain-chroma>=1.1.0",
    # Web UI
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

[project.urls]
Homepage = "https://github.com/nazbn/zori"
Repository = "https://github.com/nazbn/zori"
Issues = "https://github.com/nazbn/zori/issues"

[project.optional-dependencies]
qdrant = ["qdrant-client>=1.9"]
huggingface = ["sentence-transformers>=3.0", "langchain-huggingface>=0.1"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
zori = "zori.cli:app"

[tool.ruff]
line-length = 100
target-version = "py310"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
